# pyext-benchmarks

./: .gitignore  Makefile  README.md  pyproject.toml
src/: benchmark.py  benchmark_all.py  runner.py  update_ground_truth.py
src/cython_implementation/: funcs.pyx  setup.py
src/data/: constants.py
src/data/texts/: 1.txt  lorem_ipsum.txt  lorem_ipsum_long.txt
src/julia_implementation/: funcs.jl  funcs.py
src/python_implementation/: funcs.py
src/rust_implementation/: Cargo.toml  pyproject.toml
src/rust_implementation/src/: lib.rs
